# spotify-client

./: README.md  daily_gospel_exegesis.csv  daily_gospel_exegesis.md  matthew-study-1.md  matthew-study-10.md  matthew-study-11.md  matthew-study-12.md  matthew-study-13.md  matthew-study-14.md  matthew-study-2.md  matthew-study-3.md  matthew-study-4.md  matthew-study-5.md  matthew-study-6.md  matthew-study-7.md  matthew-study-8.md  matthew-study-9.md  pyproject.toml
spotify_client/: episodes.py  verse.py
spotify_data/4Pppt42NPK2XzKwNIoW7BR/: 01opde0Ek0H0LgtKH75yTF.json  01rWjOwVjKOQz9GpnbgaZq.json  02rmhUHdLaT4DyJWqaf5Gy.json  036RRIf7bjZ9frLVEVVudz.json  03EDli04Dxxtj0RhGoKS00.json  03mLb0utXNqHh1k46nVN9Y.json  05Flyt2wOU9oIuxwPujwjI.json  05MI47B6IxinqcbCHMHKjL.json  060V8gYtbUBuRqQbHFB5Nm.json  069Q4LJexZ9IPqcRAYqkv1.json  071XmWJTmpCk320FwEbxxj.json  079OkEnQM6ssxSesGyGda1.json  07OgYC79x4vqH3lxri18P1.json  08I8hO1Eb049nKeIGQ4KGs.json  092aVeUC6kHYnCI145bBCk.json  0ALx8K0tVZbApJVv6ujQzQ.json  0Bey7Q3NBGCkGgCIAmnmhP.json  0C1dbWe95QgKv3iudATufP.json  0CjPBucM57J5LEmceYH8aV.json  0Cv9skbytjduGl76hGn3tb.json  0D6zXAmqCIXojubWa9vH0O.json  0Dmwov3nSsJ7zCfNPPZsOI.json  0ECi35UveAoPyB1pLteGnR.json  0F1t49Vd6V9tGMsQOlNOUA.json  0FrEjMwfe5Z4MaokSDo2Mj.json  0GVKG7ds4UkEizHs1IOwvD.json  0H93guvhVZu2BoYklKYuCt.json  0I14xaWxfa1Af1jNUfClRx.json  0IHxAzc3DamEdECND4k7WA.json  0IbiRfOATE6kjYcN0QDK1f.json  0JjOHChCrj2sADOFwgs3jh.json  0K86Ky5DZXeUHS3I2EF4nh.json  0KJ7Z1f7cvYM3L0fObnmZv.json  0Kn0oKBQQDKkbVJsKBhid4.json  0Kr9VRGgwJmqtH6B6yZD7i.json  0LKrp8kB3Z7KSADj42lmqM.json  (+734 more)
(+490 files in other folders)
